--- a/yaml_templates/resume_40aug.yaml
+++ b/yaml_templates/resume_40aug.yaml
@@ -4,83 +4,15 @@
         run_settings: %(run_settings_path)s,
         training_set_mode: "train"
     },
-    model: !obj:pylearn2.models.mlp.MLP {
-        batch_size: &batch_size 128,
-        input_space: !obj:pylearn2.space.Conv2DSpace {
-            shape: %(final_shape)s,
-            num_channels: 1,
-            axes: ['c', 0, 1, 'b'],
-        },
-        layers: [ !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                     layer_name: h1,
-                     output_channels: 48,
-                     irange: .025,
-                     init_bias: 0,
-                     kernel_shape: [8, 8],
-                     pool_shape: [2, 2],
-                     pool_stride: [2, 2],
-                     max_kernel_norm: 1.9365
-                 },!obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                     layer_name: h2,
-                     output_channels: 96,
-                     irange: .025,
-                     init_bias: 1,
-                     kernel_shape: [5, 5],
-                     pool_shape: [2, 2],
-                     pool_stride: [2, 2],
-                     max_kernel_norm: 1.9365
-                 }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                     layer_name: h3,
-                     output_channels: 128,
-                     irange: .025,
-                     init_bias: 0,
-                     kernel_shape: [3, 3],
-                     border_mode: full,
-                     pool_shape: [1, 1],
-                     pool_stride: [1, 1],
-                     max_kernel_norm: 1.9365
-                  }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                     layer_name: h4,
-                     output_channels: 192,
-                     irange: .025,
-                     init_bias: 0,
-                     kernel_shape: [3, 3],
-                     border_mode: full,
-                     pool_shape: [1, 1],
-                     pool_stride: [1, 1],
-                     max_kernel_norm: 1.9365
-                 }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                     layer_name: 'h5',
-                     output_channels: 128,
-                     irange: .025,
-                     init_bias: 1,
-                     kernel_shape: [3, 3],
-                     border_mode: full,
-                     pool_shape: [2, 2],
-                     pool_stride: [2, 2],
-                     max_kernel_norm: 1.9365
-                 }, !obj:pylearn2.models.mlp.RectifiedLinear {
-                     dim: 1024,
-                     max_col_norm: 1.9,
-                     layer_name: h6,
-                     istdev: .05,
-                     W_lr_scale: .25,
-                     b_lr_scale: .25
-                 }, !obj:pylearn2.models.mlp.Softmax {
-                     n_classes: %(n_classes)i,
-                     max_col_norm: 1.9365,
-                     layer_name: y,
-                     istdev: .05,
-                     W_lr_scale: .25,
-                     b_lr_scale: .25
-                 }
-                ],
+    model: &model !obj:pylearn2.monitor.push_monitor {
+        model: !pkl: "%(resume_pickle)s",
+        name: "monitor_validation"
     },
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
         train_iteration_mode: even_shuffled_sequential,
         monitor_iteration_mode: even_sequential,
         batch_size: *batch_size,
-        learning_rate: 0.015,
+        learning_rate: 0.0015,
         learning_rule: !obj:neukrill_net.update_norm_monitor.UpdateNormMonitorLearningRule {
             base_learning_rule: !obj:pylearn2.training_algorithms.learning_rule.Momentum {
                 init_momentum: 0.5
@@ -89,7 +21,6 @@
         },
         monitoring_dataset: {
                 'train': *train
-            },
         },
         cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [ 
             !obj:pylearn2.costs.mlp.dropout.Dropout {
@@ -139,7 +70,7 @@
         !obj:pylearn2.training_algorithms.sgd.LinearDecayOverEpoch {
             start: 1,
             saturate: 25,
-            decay_factor: 0.025
+            decay_factor: 0.00025
         }
 
     ],
